# pixelflow

./: .gitignore  .pre-commit-config.yaml  CITATION(1).cff  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
data/masks/: CI2D3_Sample_Subset_3411.dbf  CI2D3_Sample_Subset_3411.shp  CI2D3_Sample_Subset_3411.shx
src/pixelflow/: __init__.py  core.py  simulate.py
src/pixelflow/builtins/: shape.py
tests/: _utils.py  conftest.py  test_core.py
