[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelflow"
authors = [
  {name = "Alan R. Lowe", email = "alowe@turing.ac.uk"},
  {name = "Isabel S. Fenton", email = "ifenton@turing.ac.uk"}
]
description = "Pixelflow"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["image analysis"]
license = {text = "BSD-3-Clause"}
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "porespy",
  "scikit-image>=0.20.0" # to include the spacing argument in regionprops
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pixelflow*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/pixelflow/_version.py"
